<resources>
    <string name="app_name">adminnegocios</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="do_not_have_account"><u>Registrate Ahora!</u></string>
    <string name="repeat_password">Repita la Contraseña</string>
    <string name="register">Registrar</string>
    <string name="Logout">Logout</string>
    <string name="sign_out">Cerrar Sesion</string>
    <string name="profile">PERFIL</string>
    <string name="Username">Usuario:</string>
    <string name="name">Nombre:</string>
    <string name="phone">Celular:</string>
    <string name="change_account">Cambiar datos de cuenta</string>
    <string name="phone_profile">Celular</string>
    <string name="username">Usuario:</string>
    <string name="name_profile">Usuario</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_title">Producto</string>
    <string name="product_details">Detalles de Producto</string>
</resources>